[tool.poetry]
name = "repl_nix_RK-Blogging-Personal-Bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.7.1"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
bs4 = "^0.0.1"
xds-protos = "^0.0.11"
aiohttp = "^3.8.3"
google-auth-oauthlib = "^1.0.0"
motor = "^3.1.1"
Pyrogram = "^2.0.97"
telegraph = "^2.2.0"
google-api-python-client = "^2.77.0"
Pillow = "^9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
